<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".DetailsActivity">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar" />

	<ScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true">

		<androidx.cardview.widget.CardView
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_margin="4dp">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="8dp">

				<TextView
					android:id="@+id/textViewFileNameHeader"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="16dp"
					android:layout_marginTop="32dp"
					android:layout_marginEnd="16dp"
					android:text="@string/file_name"
					android:textColor="@color/black"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/textViewFileName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/textViewFileNameHeader"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="16dp"
					android:layout_marginTop="4dp"
					android:layout_marginEnd="16dp" />

				<TextView
					android:id="@+id/textViewStorageTypeHeader"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/textViewFileName"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="16dp"
					android:layout_marginTop="32dp"
					android:layout_marginEnd="16dp"
					android:text="@string/file_storage_type"
					android:textColor="@color/black"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/textViewFileStorageType"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/textViewStorageTypeHeader"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="16dp"
					android:layout_marginTop="4dp"
					android:layout_marginEnd="16dp" />

				<TextView
					android:id="@+id/textViewFileEncryptionHeader"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/textViewFileStorageType"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="16dp"
					android:layout_marginTop="32dp"
					android:layout_marginEnd="16dp"
					android:text="@string/file_encryption"
					android:textColor="@color/black"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/textViewFileEncryption"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/textViewFileEncryptionHeader"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="16dp"
					android:layout_marginTop="4dp"
					android:layout_marginEnd="16dp" />

				<TextView
					android:id="@+id/textViewContentHeader"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/textViewFileEncryption"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="16dp"
					android:layout_marginTop="32dp"
					android:layout_marginEnd="16dp"
					android:text="@string/file_content"
					android:textColor="@color/black"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/textViewFileContent"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/textViewContentHeader"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="16dp"
					android:layout_marginTop="4dp"
					android:layout_marginEnd="16dp"
					android:layout_marginBottom="16dp"
					android:maxLines="5"
					android:minLines="1"
					android:scrollbars="vertical" />

			</RelativeLayout>

		</androidx.cardview.widget.CardView>

	</ScrollView>

</RelativeLayout>
